[package]
name = "cargo-artifact-dependency"
version = "0.4.1"
edition = "2024"
description = "Stable crate alternative for cargo artifact dependency."
license = "MIT OR Apache-2.0"
repository = "https://github.com/RoxyOS/cargo-artifact-dependency"
homepage = "https://github.com/RoxyOS/cargo-artifact-dependency"
documentation = "https://docs.rs/cargo-artifact-dependency"
readme = "README.md"
keywords = ["cargo", "artifact", "dependency", "install"]
categories = ["development-tools::build-utils"]

[dependencies]
apply_if = "1.2.1"
cargo-install = "0.2.0"
derive_builder = "0.20.2"
tempfile = "3.23.0"
thiserror = "2.0.18"
